--- a/app_dogtinder/templates/registration.html
+++ b/app_dogtinder/templates/registration.html
@@ -87,6 +87,13 @@
           />
           <label for="password"><span>Confirm Password</span></label>
         </div>
+        <div id="agree_to_terms">
+          <input type="checkbox" name="agree_terms" id="checkbox" />
+          <label class="agree"
+            >I agree to the
+            <a href="/terms" class="links">Terms and Conditions.</a></label
+          >
+        </div>
         <button class="btn btn-warning">Register</button>
       </form>
       <p>
