--- a/app_dogtinder/static/css/registration_style.css
+++ b/app_dogtinder/static/css/registration_style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px;
   padding: 0px;
+  font-style: Montserrat !important;
 }
 body {
   background-color: white;
@@ -10,9 +11,7 @@ body {
   margin: 10vh;
   margin-left: auto;
   margin-right: auto;
-}
-.form-elements {
-  margin-left: 35px;
+  text-align: center;
 }
 button {
   margin: 20px 0px 0px 0px;
@@ -21,9 +20,7 @@ button {
   color: orange;
   text-decoration: none !important;
 }
-#already {
-  margin-left: 35px;
-}
+
 #logo {
   margin-left: auto;
   margin-right: auto;
@@ -34,12 +31,11 @@ span,
 label,
 textarea {
   display: block;
-  margin: 10px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
   padding: 5px;
   border: none;
   font-size: 22px;
+  text-align: center;
 }
 
 textarea:focus,
@@ -54,6 +50,7 @@ textarea.question {
   font-weight: 300;
   border-radius: 2px;
   margin: 0;
+  text-align: center;
   border: none;
   width: 100%;
   background: rgba(0, 0, 0, 0);
@@ -67,18 +64,22 @@ textarea.question + label {
   display: block;
   position: relative;
   white-space: nowrap;
+  text-align: center;
   padding: 0;
   margin: 0;
-  width: 50%;
+  width: 60%;
   border-top: 1px solid orangered;
   -webkit-transition: width 0.4s ease;
   transition: width 0.4s ease;
+  left: 50%;
+  transform: translate(-50%, 0);
+  /* transition: left 0.4s linear, margin-left 0.4s ease-out; */
   height: 0px;
 }
 
 input.question:focus + label,
 textarea.question:focus + label {
-  width: 100%;
+  width: 80%;
 }
 
 input.question:focus,
@@ -100,9 +101,10 @@ input.question:valid + label > span {
 
 textarea.question:focus + label > span,
 textarea.question:valid + label > span {
-  top: -150px;
-  font-size: 18px;
+  top: -90px;
+  font-size: 14px;
   color: #333;
+  text-align: center;
 }
 
 input.question:valid + label,
@@ -120,6 +122,7 @@ textarea.question + label > span {
   font-weight: 300;
   margin: 0;
   position: absolute;
+  text-align: center;
   color: #8f8f8f;
   font-size: 20px;
   top: -35px;
@@ -168,4 +171,16 @@ textarea.question:invalid ~ input[type="submit"] {
   100% {
     opacity: 1;
   }
+}
+#agree_to_terms {
+  margin-top: 20px;
+}
+.agree,
+#checkbox {
+  color: #999;
+  font-weight: 100;
+  font-size: 11pt;
+  padding: 0px;
+  display: inline-block;
+  vertical-align: middle;
 }
