even more pages and features

--- a/app_dogtinder/templates/login.html
+++ b/app_dogtinder/templates/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | Puppy Love</title>
     {% load static %}
+    <link rel="icon" href="{% static 'img/browser-icon.png' %}" />
     <link
       href="https://fonts.googleapis.com/css?family=Kristi|Miss+Fajardose|Reenie+Beanie&display=swap"
       rel="stylesheet"
