--- a/app_dogtinder/templates/profile.html
+++ b/app_dogtinder/templates/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile | Puppy Love</title>
     {% load static %}
+    <link rel="icon" href="{% static 'img/browser-icon.png' %}" />
     <link rel="stylesheet" href="{% static 'css/dogprofile_style.css' %}" />
     <link
       rel="stylesheet"
@@ -24,11 +25,9 @@
               style="background-color: rgb(255, 250, 236)"
             >
               <a class="navbar-brand" href="#">
-                <img
-                  href="/dashboard"
-                  id="logo"
-                  src="{% static 'img/logo_small.png' %}"
-                />
+                <a href="/dashboard">
+                  <img id="logo" src="{% static 'img/logo_small.png' %}"
+                /></a>
               </a>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
@@ -62,18 +61,22 @@
                       aria-haspopup="true"
                       aria-expanded="false"
                     >
-                      Help
+                      Menu
                     </a>
                     <div
                       class="dropdown-menu dropdown-menu-right"
                       aria-labelledby="navbarDropdown"
                     >
+                      <a class="dropdown-item" href="/add_another_dog"
+                        >Add A Dog</a
+                      >
                       <a class="dropdown-item" href="/account_settings"
                         >Account Settings</a
                       >
-                      <a class="dropdown-item" href="/how">How It Works</a>
                       <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="/how">How It Works</a>
                       <a class="dropdown-item" href="/contact">Contact Us</a>
+                      <a class="dropdown-item" href="/logout">Logout</a>
                     </div>
                   </li>
                 </ul>
