--- a/app_dogtinder/templates/registration.html
+++ b/app_dogtinder/templates/registration.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register | Puppy Love</title>
     {% load static %}
+    <link rel="icon" href="{% static 'img/browser-icon.png' %}" />
     <link
       href="https://fonts.googleapis.com/css?family=Kristi|Miss+Fajardose|Reenie+Beanie&display=swap"
       rel="stylesheet"
@@ -91,7 +92,9 @@
           <input type="checkbox" name="agree_terms" id="checkbox" />
           <label class="agree"
             >I agree to the
-            <a href="/terms" class="links">Terms and Conditions.</a></label
+            <a href="/terms" target="_blank" class="links"
+              >Terms and Conditions</a
+            >.</label
           >
         </div>
         <button class="btn btn-warning">Register</button>
