--- a/app_dogtinder/templates/account_settings.html
+++ b/app_dogtinder/templates/account_settings.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard | Puppy Love</title>
+    <title>Account Settings | Puppy Love</title>
     {% load static %}
     <link rel="icon" href="{% static 'img/browser-icon.png' %}" />
-    <link rel="stylesheet" href="{% static 'css/dashboard_style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/account_settings.css' %}" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -51,12 +51,6 @@
                 id="navbarSupportedContent"
               >
                 <ul class="navbar-nav mr-auto">
-                  <li>
-                    <a class="nav-link">Hello, User</a>
-                  </li>
-                  <li>
-                    <a class="nav-link">|</a>
-                  </li>
                   <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
@@ -96,50 +90,85 @@
       <!--RATE START-->
       <div id="main">
         <div id="banner">
-          <h1 id="rate_title">R A T E T H I S D O G</h1>
-          <h6 id="subtitle">
-            WE ONLY RATE DOGS OVER 10 BECAUSE THEY'RE ALL GOOD DOGS
-          </h6>
+          <h1 id="rate_title">ACCOUNT SETTINGS</h1>
         </div>
-        <!-- <h3>RATE DOGS</h3> -->
-        <div id="rating_panel">
-          <div id="pic_panel">
-            <img src="{% static 'img/lilly.jpg'%}" class="dog_pic" />
-          </div>
-          <div id="desc">
+
+        <!--EDIT DOG-->
+        <div id="form_panel">
+          <form action="/process_registration" method="POST" class="form-group">
             <div>
-              <h3>Lilly, 6</h3>
-              <p>Corona, CA</p>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
-                totam eum ipsum voluptates repellat consequatur delectus unde
-                provident quaerat, dolore minus natus, quasi inventore quo
-                perspiciatis, facilis nisi consectetur officiis!
-              </p>
-            </div>
-            <form>
-              <div id="value" class="value" href="/save_rating"></div>
-              <!-- <label for="formControlRange">Rate this good dog</label> -->
               <input
-                type="range"
-                min="11"
-                max="15"
-                step="1"
-                value="11"
-                class="form-control-range"
-                id="myRange"
+                type="text"
+                name="first_name"
+                class="question"
+                id="nme"
+                required
+                autocomplete="off"
               />
-              <button id="save" class="btn btn-warning">Save Rating</button>
-            </form>
-          </div>
-          <a href="#" id="next">></a>
+              <label for="first_name"><span>First Name</span></label>
+            </div>
+            <div>
+              <input
+                type="text"
+                name="last_name"
+                class="question"
+                id="nme"
+                required
+                autocomplete="off"
+              />
+              <label for="last_name"><span>Last Name</span></label>
+            </div>
+            <div>
+              <input
+                type="text"
+                name="username"
+                class="question"
+                id="nme"
+                required
+                autocomplete="off"
+              />
+              <label for="username"><span>Username</span></label>
+            </div>
+            <div>
+              <input
+                type="email"
+                name="email"
+                class="question"
+                id="nme"
+                required
+                autocomplete="off"
+              />
+              <label for="email"><span>Email</span></label>
+            </div>
+            <div>
+              <input
+                type="password"
+                name="password"
+                class="question"
+                id="nme"
+                required
+                autocomplete="off"
+              />
+              <label for="password"><span>Password</span></label>
+            </div>
+            <div>
+              <input
+                type="password"
+                name="confirm_pw"
+                class="question"
+                id="nme"
+                required
+                autocomplete="off"
+              />
+              <label for="password"><span>Confirm Password</span></label>
+            </div>
+            <button id="updatebtn" class="btn btn-warning">
+              Update Account
+            </button>
+          </form>
         </div>
       </div>
-      <!--RATE END-->
-
-      <!--AD START-->
-      <img id="ad" src="{% static 'img/match_ad.jpg'%}" />
-      <!--AD END-->
+      <!--EDIT DOG-->
 
       <!--FOOTER-->
       <div id="footer">
