--- a/app_dogtinder/templates/add_dog.html
+++ b/app_dogtinder/templates/add_dog.html
@@ -21,7 +21,9 @@
   <body>
     <div id="form_panel">
       <img id="logo" src="{% static 'img/logo_small.png' %}" />
-      <form action="/process_dog" method="POST">
+      {% block content %}
+      <form action="/process_dog" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
         <h3>Add your dog.</h3>
 
         <div>
@@ -38,7 +40,7 @@
         <div>
           <input
             type="text"
-            name="dog_age"
+            name="age"
             class="question"
             id="nme"
             required
@@ -49,7 +51,7 @@
         <div>
           <input
             type="text"
-            name="dog_breed"
+            name="breed"
             class="question"
             id="nme"
             required
@@ -60,7 +62,7 @@
         <div>
           <input
             type="text"
-            name="text"
+            name="city"
             class="question"
             id="nme"
             required
@@ -71,7 +73,7 @@
         <div>
           <input
             type="text"
-            name="text"
+            name="state"
             class="question"
             id="nme"
             required
@@ -82,7 +84,7 @@
         <div>
           <input
             type="text"
-            name="text"
+            name="zipcode"
             class="question"
             id="nme"
             required
@@ -93,7 +95,7 @@
         <div>
           <textarea
             type="text"
-            name="dog_desc"
+            name="description"
             class="question"
             id="nme"
             required
@@ -108,20 +110,13 @@
               type="file"
               class="form-control-file"
               id="exampleFormControlFile1"
+              name="image"
             />
           </div>
         </div>
-        <div class="choices">
-          <input type="checkbox" name="agree_rated" id="checkbox" />
-          <label class="agree">I would like to have my dog rated</label>
-        </div>
-        <div class="choices">
-          <input type="checkbox" name="agree_playdate" id="checkbox" />
-          <label class="agree"
-            >I would like to sign my dog up for playdate matching</label
-          >
-        </div>
-        <button class="btn btn-warning">Add dog</button>
+          <button class="btn btn-warning" type="submit">Add dog</button>
+        </form>
+        {% endblock %}
       </form>
       <button id="skip" class="btn btn-outline-warning">
         <a href="/dashboard" class="links">Skip</a>
